# Spark_poetry_nix

./: README.md  flake.nix  pyproject.toml
data_extraction/: main.py
