[tool.poetry]
name = "testing-spark-nix-poetry"
version = "0.1.0"
description = "Test"
authors = ["Guimarret <guimarret@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
jupyter = "^1.0.0"
ipython = "^8.24.0"
ipykernel = "^6.29.4"
pylance = "^0.11.1"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
